--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "lint": "eslint \"src/\" --cache --fix --format table"
   },
   "dependencies": {
+    "antd": "^4.6.3",
+    "axios": "^0.20.0",
     "node-sass": "^4.14.1",
     "react": "^16.9.0",
     "react-dom": "^16.9.0"
@@ -38,7 +40,8 @@
     "jest-css-modules-transform": "^4.0.0",
     "lint-staged": "^10.3.0",
     "parcel-bundler": "^1.12.4",
-    "prettier": "^2.1.1"
+    "prettier": "^2.1.1",
+    "sass": "^1.26.10"
   },
   "husky": {
     "hooks": {
